# module-discovery

./: CHANGELOG.md  SetupHooks.hs  cabal.project  module-discovery.cabal
